dotfiles: Auto configure path in makefile
Signed-off-by: Waqar Ali <waqar.272@gmail.com>

--- a/server-tmux.conf
+++ b/server-tmux.conf
@@ -45,7 +45,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 #Allow mouse selection
-set-option -g mouse on
+#set-option -g mouse on
 
 ##+ current window navigation:
 bind-key h select-pane -L
